--- a/k.css
+++ b/k.css
@@ -4,5 +4,5 @@
 body{
 background-color:rgb(51, 56, 61);    
 color :rgba(13, 60, 92, 0.849);
-background-image: url(https//shenlan5581.github.io.back.png);
+background-image: url(https//shenlan5581.github.io./back.png);
 }
