--- a/k.css
+++ b/k.css
@@ -3,6 +3,20 @@
 
 body{
 background-color:rgb(51, 56, 61);    
-color :rgba(13, 60, 92, 0.849);
+color :rgba(214, 213, 202, 0.849);
+padding:0px;
+border:0px;
+margin:0px;
+}
+#top{
+  font-size:18px; 
+  text-align: center;
+  display:block;
+  background-color: rgba(15, 70, 27, 0.836);
+  margin:0px;
+  border:0px;
+  padding:0px;
+  width:100%;
+  height:120px;
 }
 
