--- a/k.css
+++ b/k.css
@@ -2,21 +2,44 @@
 
 
 body{
-background-color:rgb(51, 56, 61);    
-color :rgba(214, 213, 202, 0.849);
+background-color:rgb(32, 38, 46);    
+color :rgba(255, 255, 255, 0.849);
 padding:0px;
 border:0px;
 margin:0px;
 }
 #top{
-  font-size:18px; 
+  font-size:50px; 
   text-align: center;
   display:block;
-  background-color: rgba(15, 70, 27, 0.836);
+  background-color: rgba(52, 48, 58, 0.836);
   margin:0px;
   border:0px;
   padding:0px;
   width:100%;
-  height:120px;
+  height:100px;
 }
+#auther{
+  font-size :10px;
+  color:rgba(116, 116, 107, 0.849);
+}
+
+.content{
+    /* background-color: rgb(105, 124, 136); */
+     padding-left: 20%;
+     display: block; 
+     font-size:17px;  
+
+}
+ 
+.content > content{
+  display:none;
+  width:80%;
+  color:rgb(114, 107, 107);
+  background-color: rgb(238, 241, 245);
+  padding:10px;
+  border-radius:10px;
+}
+ 
+
 
