--- a/page/css_js/k.css
+++ b/page/css_js/k.css
@@ -2,8 +2,9 @@
 
 
 body{
-background-color:rgb(32, 38, 46);    
-color :rgba(255, 255, 255, 0.849);
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+color:rgb(73, 73, 73);
+background-color: rgb(255, 254, 254);
 padding:0px;
 border:0px;
 margin:0px;
@@ -12,50 +13,54 @@ margin:0px;
   font-size:50px; 
   text-align: center;
   display:block;
-  background-color: rgba(52, 48, 58, 0.836);
-  margin:0px;
-  border:0px;
-  padding:0px;
+  color:#f5f5f5;
+  background-color: rgb(40, 40, 43);
+  opacity: 1; 
   width:100%;
-  height:100px;
+  height:70px;
+  
 }
 #auther{
   font-size :10px;
-  color:rgba(116, 116, 107, 0.849);
+  color:rgba(158, 158, 158, 0.849);
 }
-
 .content{
     /* background-color: rgb(105, 124, 136); */
-     padding-left: 20%;
      display: block; 
-     font-size:17px;  
-
+     font-size:15px;  
 }
- 
-.content > content{
-  display:none;
-  width:80%;
-  color:rgb(114, 107, 107);
-  background-color: rgb(238, 241, 245);
-  padding:10px;
-  border-radius:10px;
-}
+#left{ 
+  border-style:solid;
+  border-width: 1px;
+  border-color: rgb(206, 205, 205);
+  border-radius: 5px;
+  width:10%; 
+  margin:25px;
+  margin-left:260px;
+  padding: 10px;
+  padding-left: 20px;
+  float: left;
+ }
+ #middle{
+  border-style:solid;
+  border-width: 1px;
+  border-color: rgb(206, 205, 205);
+  width:60%; 
+  margin:25px;
+  margin-left:520px; 
+  padding: 10px;
+  padding-left: 20px;
+  border-radius: 5px;
+ }
  
 pre {
   font-size: 15px;
 }
-.red{
-  color:rgb(177, 54, 54);font-size: 14px;
-}
-.blue{
-  color:rgb(18, 67, 122);font-size: 16px;
-}
-#a{
- background-color: rgb(255, 255, 255)
-}
+ 
 h2{
   text-align: center; color:rgba(35, 37, 32, 0.658);
 }
 a{
-  color:rgba(156, 102, 145, 0.849)
+  color:rgb(0, 50, 216);
+  text-decoration:none;
 }
