--- a/page/css_js/k.css
+++ b/page/css_js/k.css
@@ -36,7 +36,7 @@ margin:0px;
   border-radius: 5px;
   width:10%; 
   margin:25px;
-  margin-left:260px;
+  margin-left:3%;
   padding: 10px;
   padding-left: 20px;
   float: left;
@@ -47,7 +47,7 @@ margin:0px;
   border-color: rgb(206, 205, 205);
   width:60%; 
   margin:25px;
-  margin-left:520px; 
+  margin-left:25%; 
   padding: 10px;
   padding-left: 20px;
   border-radius: 5px;
