--- a/css_js/index.css
+++ b/css_js/index.css
@@ -98,6 +98,7 @@ a{
   color:rgb(0, 0, 0);
 }
 code{
+  background-image: url("https:shenlan5581.github.io./img/black.jpeg");
   border-style:solid;
   border-width:0px;
   border-color: rgb(255, 255, 255);
