--- a/web/animation.css
+++ b/web/animation.css
@@ -6,13 +6,13 @@
 }
 @keyframes top
 {
-    0%    { height:1000px;background-color: rgb(255, 255, 255);font-size:200px; }
-    20%    { height:1000px;background-color: rgb(255, 255, 255); font-size:200px; } 
+    0%    { color:rgb(236, 192, 109);  height:1000px;background-color: rgb(218, 196, 156);font-size:200px; }
+    20%   { height:1000px;background-color: rgb(255, 255, 255); font-size:200px; } 
     100%  {height:80px;  background-color: rgb(50, 50, 53);font-size:50px; }
 }
 @-moz-keyframes top /* Firefox */
 {
-    0%    { height:1000px;background-color: rgb(255, 255, 255); font-size:200px; } 
+    0%    {color:rgb(230, 189, 114);  height:1000px;background-color:rgb(218, 196, 156);font-size:200px; } 
     20%   { height:1000px;background-color: rgb(255, 255, 255); font-size:200px; } 
     100%  {height:80px;  background-color :  rgb(51, 51, 59);font-size:50px;}
 }
