--- a/gitPage/index.css
+++ b/gitPage/index.css
@@ -1,9 +1,9 @@
 
 body{
- font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- color:rgb(88, 87, 87);
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+color:rgb(88, 87, 87);
 background-color: rgb(255, 255, 255);
-width:1920px;
+width:1920px;;
 margin:auto;
 
 }
@@ -11,16 +11,14 @@ margin:auto;
   font-size:50px; 
   text-align: center;
   display:block;
-  color:#f5f5f5;
+  color:#f1f1f1;
   background-color: rgb(50, 50, 53);
   opacity: 1; 
   width:100%;
-  height:80px;
- 
+  height:75px;
 }
 #auther{
   font-size :10px;
-  display:inline-block;
   color:rgba(207, 10, 10, 0.849);
 }
 .content{
@@ -47,12 +45,6 @@ margin:auto;
   width: 120px;
   height:120px;
   border-radius:20px;
-  transition:margin-top 1s;
-  -webkit-transition:margin-top  1s;
- 
-}
-#info>img:hover{   /*头像*/
-  margin-top: 20px;;
 }
 
 #src{ 
@@ -65,6 +57,8 @@ margin:auto;
   height:20px;
   border-radius:20px;
 }
+
+
 hr{
   border-top-style:solid;
   border-width: 1px;
@@ -80,14 +74,10 @@ hr{
   padding: 15px;  /* 内边框*/ 
   float: left; 
  }
- 
-
-
-
-
- /* ---------*/
  #middle{
-  font-size: 90%;
+  border-style:solid;
+  border-width: 1px;
+  border-color: rgb(206, 205, 205);
   width:1000px; 
   margin-top:25px;
   margin-left:20px; 
@@ -96,7 +86,7 @@ hr{
   float:left; 
  }
 pre {
-  font-size:90%;
+  font-size:100%;
 }
 h2{
   text-align: center; color:rgba(35, 37, 32, 0.658);
@@ -105,188 +95,4 @@ a{
   font-size: 1em;
   color:rgb(0, 50, 216);
   text-decoration:none;
-}
-.title{
-  font-size:20px;
-  font-weight: bold;
-  color:rgb(0, 0, 0);
-}
-/*-------------------------------------*/
-web{   
-   position:relative;
-   display:block;
-   height:500px;
-   padding:70px;
-}
- 
- 
-
-.server
-{ font-size:10px;
-  padding:10px;;
-  text-align: center;
-  border-style:solid;
-  border-width: 1px;
-  border-color: rgb(182, 182, 182);
-  border-radius:5px;
-  position:absolute;
-  display:block;
-  box-shadow: 5px 10px 10px #dfdfdf;
-  background-color: rgba(247, 247, 247, 0.631);
-  transition:border-color  1s;
-  -webkit-transition:border-color 1s;
-
-  transition:font-size  1s;
-  -webkit-transition:font-size  1s;
- 
-}
-.server:hover{
-   border-color:rgba(6, 128, 243, 0.849);
-   font-size:20px;
- 
- 
- } 
-
-.client{
-  color:rgb(157, 157, 157);  
-  padding:10px;;
-  text-align: center;
-  border-style:solid;
-  border-width: 1px;
-  border-color: rgb(182, 182, 182);
-  border-radius:5px;
-  display:block;
-  position:absolute;
-  left:70px;
-  width :90px;
-  height:40px;
-  box-shadow: 5px 10px 10px #dfdfdf;
-  background-color: rgba(247, 247, 247, 0.631);
-}
-web>client1{
-  
-  top:300px; 
-}
- 
-web>server{
-  opacity:1;
-  left:480px;
-  top:120px;
-  width :400px;
-  height:400px;
-}
-web>server>epoll{
-  left:35px;
-  top:60px;
-  width :35px;
-  height:280px;
-}
-web>server>pthread_pool{
-  left:240px;   
-  top:60px;
-  width :100px;
-  height:100px;
-
-}
-web>server>protocol{
-  left:240px;
-  top:195px;
-  width :100px;
-  height:30px;
-  
-}
-
-web>server>service{
-  left:240px;
-  top:260px;
-  width :100px;
-  height:80px;
-}
-web>server>queue{
-  left:125px;
-  top:160px;
-  width :60px;
-  height:80px;
-}
-http{
-  background-color: rgb(255, 255, 255);
-  opacity: 1;
-  color:rgb(12, 78, 219);  
-  text-align: center;
-  border-style:solid;
-  border-width: 1px;
-  border-radius:5px;
-  border-color: rgb(182, 182, 182);
-  display:block;
-  position:absolute;
-  top:335px;
-  left:90px;
-  width :70px;
-  height:20px;
- 
-}
-#doc{
-  font-size: 12px;
-  font-style: italic;
-  color:rgb(9, 144, 197);
-  text-align: center;
-  display:block;
-  position:absolute;
-  top:450px;
-  left:70px;
-  width :300px;
-  height:100px;
-  font-weight: bold;
-}
- 
-
-/*c++ rvalue*/
-code { 
-  border-style:solid;
-  border-width:0px;
-  border-color: rgb(255, 255, 255);
-  color: rgba(7, 191, 247, 0.849);
-  font-size:15px;
-  display:block;
-  width:100%;
-  background-color: rgb(52, 58, 59); 
-  border-radius: 10px;
-  padding: 5px;
-  
-  /*过渡效果 
-  transition:height 2s;
-  -webkit-transition:height 2s;
- */
-}
-/* code*/
-/* 过渡效果  
-code:hover{
- height:560px;
-} 
-*/
- 
-/*-------------------------------------------*/
-#x{
-display:block;
-}
-#clean{
-clear: both;
-}
- 
-red{
-  font-size:13px;
- color:rgb(187, 131, 233);
-}
-blue{
-  color:rgb(69, 130, 209);
-    font-weight: bold;
-    font-size:90%;
-}
-yellow{
-  color:rgb(247, 160, 30)
-}
-foot{
-display:block;
-height:100px;
-
 }
